lex-parser/AbductiveLogicQuery.jj
/*

LL(2) grammar for queries.

Query -> Predicate (COMMA PREDICATE)* EOF
Predicate -> LCASENAME (LBRACKET ParameterList RBRACKET)?
ParameterList -> (Parameter (COMMA Parameter)*)?
Parameter -> (UCASENAME | LCASENAME | Predicate)

*/

options {
  LOOKAHEAD = 2;
  CHOICE_AMBIGUITY_CHECK = 2;
  OTHER_AMBIGUITY_CHECK = 1;
  STATIC = true;
  DEBUG_PARSER = false;
  DEBUG_LOOKAHEAD = false;
  DEBUG_TOKEN_MANAGER = false;
  ERROR_REPORTING = true;
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = false;
  IGNORE_CASE = false;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  SANITY_CHECK = true;
  FORCE_LA_CHECK = false;
}

PARSER_BEGIN(AbductiveLogicQuery)

public class AbductiveLogicQuery {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    AbductiveLogicQuery parser = new AbductiveLogicQuery(System.in);
    parser.AbductiveLogicQuery();
  }

}

PARSER_END(AbductiveLogicQuery)

SKIP :
{
  " " |
  "\t" |
  "\n" |
  "\r"  
}

TOKEN :
{
  <LBRACKET: "("> |
  <RBRACKET: ")"> |
  <COMMA: ","> |
  <LCASENAME: ["a"-"z"] ( ["a"-"z","A"-"Z","_","0"-"9"] )*> |
  <UCASENAME: ["A"-"Z"] ( ["a"-"z","A"-"Z","_","0"-"9"] )*> 
}

void AbductiveLogicQuery():
{
}
{
	Predicate()
	(
		<COMMA>
		Predicate()
	)*
}

void Predicate():
{
}
{
	<LCASENAME>
	[	
		<LBRACKET>
		ParameterList()
		<RBRACKET>
	]
}

void ParameterList():
{
}
{
	[
		Parameter()
		(
			<COMMA>
			Parameter()
		)*
 	]
}

void Parameter():
{
}
{
	(
		<UCASENAME> | 
		<LCASENAME> | 
		Predicate()
	)
}
